Enhances support for URIs in the framework.