@@ -1,4 +1,4 @@
-/* @(#)UriConverter.java
+/* @(#)XmlUrlConverter.java
  * Copyright (c) 2014 Supercomputing Systems AG, Schweiz.
  * Alle Rechte vorbehalten. 
  */
@@ -6,7 +6,6 @@
 package org.jhotdraw.text;
 
 import java.io.IOException;
-import java.net.URI;
 import java.net.URL;
 import java.nio.CharBuffer;
 import java.text.ParseException;
@@ -14,25 +13,25 @@ import javafx.scene.paint.Paint;
 import org.jhotdraw.draw.io.IdFactory;
 
 /**
- * UriConverter.
+ * XmlUrlConverter.
  * @author Werner Randelshofer
  * @version $$Id$$
  */
-public class UriConverter implements Converter<URI> {
+public class XmlUrlConverter implements Converter<URL> {
 
     @Override
-    public void toString(Appendable out, IdFactory idFactory, URI value) throws IOException {
+    public void toString(Appendable out, IdFactory idFactory, URL value) throws IOException {
         out.append(value.toString());
     }
 
     @Override
-    public URI fromString(CharBuffer in, IdFactory idFactory) throws ParseException, IOException {
-        URI value =  URI.create(in.toString());
+    public URL fromString(CharBuffer in, IdFactory idFactory) throws ParseException, IOException {
+        URL value = new URL(in.toString());
         in.position(in.limit());
         return value;
     }
     @Override
-    public URI getDefaultValue() {
+    public URL getDefaultValue() {
         return null;
     }
 }
